Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -525,6 +525,7 @@ wish  & &  Assertive && & informal & polite \\
               minimum height=0.65cm, inner sep=0},
   % common options for the circles:
   ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
+  \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-0.3) {Real};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1) {VAL};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {VOICE};
 \node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2) {POLAR};
@@ -538,6 +539,7 @@ wish  & &  Assertive && & informal & polite \\
 \node[rectangle,text width=1.2cm,anchor=base] (A11) at (1,-6) {Gen};
 \node[rectangle,text width=1.2cm,anchor=base] (A12) at (1,-6.5) {Numpers};
 
+\node[rectangle,text width=0.9cm,anchor=base] (B1) at (4,-0.3) {Optimized};
 \node[rectangle,text width=0.9cm,anchor=base] (B1) at (4,-1) {VAL};
 \node[rectangle,text width=0.9cm,anchor=base] (B2) at (4,-1.5) {VOICE};
 \node[rectangle,text width=0.9cm,anchor=base] (B3) at (4,-2) {POLAR};
