--- a/name.tex
+++ b/name.tex
@@ -390,9 +390,13 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
 
 \begin{figure}
     \centering
+        \includegraphics[width=0.2\textwidth]{figures/finnish_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/turkish_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/hungarian_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/korean/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+    \includegraphics[width=0.2\textwidth]{figures/japanese/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+    \includegraphics[width=0.2\textwidth]{figures/sesotho_prefixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+    \includegraphics[width=0.2\textwidth]{figures/sesotho_suffixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \caption{Verb Suffixes}
     \label{fig:my-label}
 \end{figure}
@@ -400,6 +404,7 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
 
 \begin{figure}
     \centering
+    \includegraphics[width=0.4\textwidth]{figures/finnish_nouns/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/turkish_nouns/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/hungarian_nouns/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \caption{Noun Suffixes}
@@ -411,16 +416,17 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
     \begin{tabular}{l|l|ll|lllllllll}
     &     &    \multicolumn{2}{c|}{Pairs} & \multicolumn{2}{c|}{Full} & \multicolumn{2}{c}{Full (Types)} \\
      &   &     Optim. & Baseline & Optim. & Baseline & Optim. & Baseline \\ \hline
- & finnish nouns & -- & 0.42 (0.31) & -- & 0.37 (0.32) & -- & 0.38 (0.29) \\
- & turkish nouns & 1.0 (0.0) & 0.56 (0.36) & 1.0 (0.0) & 0.5 (0.37) & 1.0 (0.0) & 0.5 (0.36) \\
- & hungarian nouns & 1.0 (0.0) & 0.48 (0.22) & 1.0 (0.0) & 0.33 (0.27) & 1.0 (0.0) & 0.33 (0.27) \\
- & finnish verbs & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.36 (0.32) & 0.38 (0.37) \\
- & hungarian verbs & -- & -- & -- & -- & -- & -- \\
- & turkish verbs & 0.96 (0.09) & 0.46 (0.14) & 0.95 (0.0) & 0.37 (0.15) & 0.93 (0.07) & 0.36 (0.14) \\
- & korean & 0.95 (0.09) & -- & 0.96 (0.0) & -- & 0.84 (0.07) & -- \\
+Nouns & finnish  & 1.0 (0.0) & 0.42 (0.31) & 1.0 (0.0) & 0.37 (0.32) & 1.0 (0.0) & 0.38 (0.29) \\
+ & turkish  & 1.0 (0.0) & 0.56 (0.36) & 1.0 (0.0) & 0.5 (0.37) & 1.0 (0.0) & 0.5 (0.36) \\
+ & hungarian  & 1.0 (0.0) & 0.48 (0.22) & 1.0 (0.0) & 0.33 (0.27) & 1.0 (0.0) & 0.33 (0.27) \\
+ \hline
+Verbs & finnish  & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.36 (0.32) & 0.38 (0.37) \\
+ & hungarian  & 0.95 (0.09) & 0.52 (0.37) & 0.95 (0.0) & 0.5 (0.4) & 0.94 (0.0) & 0.5 (0.39) \\
+ & turkish  & 0.96 (0.09) & 0.46 (0.14) & 0.95 (0.0) & 0.37 (0.15) & 0.93 (0.07) & 0.36 (0.14) \\
+ & korean & 0.97 (0.0) & 0.56 (0.33) & 0.96 (0.09) & 0.53 (0.33) & 0.94 (0.08) & 0.53 (0.36) \\
  & japanese & -- & -- & -- & -- & -- & -- \\
- & sesotho pre & -- & -- & -- & -- & -- & -- \\
- & sesotho suff & -- & -- & -- & -- & -- & -- \\
+ & sesotho (pref.) & -- & -- & -- & -- & -- & -- \\
+ & sesotho (suff.) & -- & -- & -- & -- & -- & -- \\
     \end{tabular}
     \caption{Accuracies. }
     \label{tab:my_label}
