Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -390,13 +390,13 @@ Agreement           & Agreement & Agreement & Agreement & Agreement \\ \hline
 
 \begin{figure}
     \centering
-        \includegraphics[width=0.2\textwidth]{figures/finnish_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+        \includegraphics[width=0.4\textwidth]{figures/finnish_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/turkish_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/hungarian_verbs/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \includegraphics[width=0.4\textwidth]{figures/korean/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
-    \includegraphics[width=0.2\textwidth]{figures/japanese/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
-    \includegraphics[width=0.2\textwidth]{figures/sesotho_prefixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
-    \includegraphics[width=0.2\textwidth]{figures/sesotho_suffixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+%    \includegraphics[width=0.2\textwidth]{figures/japanese/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+%    \includegraphics[width=0.2\textwidth]{figures/sesotho_prefixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
+%    \includegraphics[width=0.2\textwidth]{figures/sesotho_suffixes/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \caption{Verb Suffixes}
     \label{fig:my-label}
 \end{figure}
@@ -433,16 +433,25 @@ Verbs & finnish  & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.36 (0.
 \end{table}
 
 
+
 \begin{table}[]
-    \centering
-    Turkish
-    
-  \include{figures/turkish_verbs/comparison}
+  \include{figures/turkish_nouns/comparison}
+  \include{figures/hungarian_nouns/comparison}
+  \include{figures/finnish_nouns/comparison}
   
-    \caption{Real and optimized ordering \mhahn{TODO I'll write a script to generate these pictures for all languages}}
+    \caption{Real and optimized ordering (nouns)}
     \label{tab:my_label}
 \end{table}
 
+
+\begin{table}[]
+  \include{figures/turkish_verbs/comparison}
+  \include{figures/hungarian_verbs/comparison}
+  \include{figures/finnish_verbs/comparison}
+  
+    \caption{Real and optimized ordering (verbs)}
+    \label{tab:my_label}
+\end{table}
 
 
 
